完成list总体结构，尚未排查bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(TinyRedis)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(TinyRedis main.cpp sds.cpp sds.h )
+add_executable(TinyRedis main.cpp sds.cpp sds.h adlist.cpp adlist.h)
 add_executable(sds test.cpp)
